[package]
name = "ashen"
version = "0.1.0"
edition = "2024"

[dependencies]
binrw = "0.14.1"
bitflags = "2.4.2"
const_format = "0.2.32"
derive_more = { version = "2.0.1", features = ["debug", "deref", "from", "into"] }
fixed = "1.24.0"
flate2 = "1.0.28"
glam = "0.30.0"
itertools = "0.12.0"
lewton = "0.10.2"
nom = "7.1.3"
num = "0.4.3"
ouroboros = "0.18.5"
paste = "1.0.14"

[dev-dependencies]
assert_approx_eq = "1.1.0"
eyre = "0.6.8"
image = "0.24.8"
