[package]
name = "ashen"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.4.2"
fixed = "1.24.0"
flate2 = "1.0.28"
itertools = "0.12.0"
lewton = "0.10.2"
nom = "7.1.3"
paste = "1.0.14"

[dependencies.image]
version = "0.24.8"
optional = true
default-features = false
features = ["png", "gif"]

[dev-dependencies]
assert_approx_eq = "1.1.0"
eyre = "0.6.8"

[features]
default = ["conv"]
conv = ["image"]
