[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
const_format = "0.2.32"
fixed = "1.24.0"
flate2 = "1.0.28"
itertools = "0.12.0"
lewton = "0.10.2"
loom = { version = "0.7.1", optional = true }
nom = "7.1.3"
paste = "1.0.14"

[dev-dependencies]
eyre = "0.6.8"

[features]
loom = ["dep:loom"]
